test/files/neg/maxwarns.check
maxwarns.scala:13: warning: method x in object X is deprecated (since forever): just to annoy people
  def a = x
          ^
maxwarns.scala:15: warning: method x in object X is deprecated (since forever): just to annoy people
  def b = x
          ^
maxwarns.scala:17: warning: method x in object X is deprecated (since forever): just to annoy people
  def c = x
          ^
error: No warnings can be incurred under -Xfatal-warnings.
5 warnings found
one error found
